# siro

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json  postcss.config.js  rollup.config.js  search-index.js  settings.html  source-files.js  webpack.config.js
.github/workflows/: doc.yml  test.yml
crates/meow/: Cargo.toml
crates/meow/src/: app.rs  global.rs  lib.rs  mailbox.rs  meow.rs  vdom.rs
crates/meow/src/vdom/: element.rs  listener.rs  node.rs  render.rs  text.rs
crates/siro/: CHANGELOG.md  Cargo.toml  README.md
crates/siro-html/: CHANGELOG.md  Cargo.toml  README.md
crates/siro-html/src/: html_element.rs  input.rs  lib.rs  textarea.rs
crates/siro-svg/: CHANGELOG.md  Cargo.toml  README.md
crates/siro-svg/src/: lib.rs
crates/siro-vdom/: Cargo.toml
crates/siro-vdom/src/: attr.rs  children.rs  event.rs  lib.rs  node.rs
crates/siro-vdom/src/children/: iter.rs
crates/siro-vdom/src/node/: element.rs  map.rs
crates/siro-web/: CHANGELOG.md  Cargo.toml  README.md
crates/siro-web/src/: app.rs  env.rs  error.rs  lib.rs  render.rs  subscription.rs
crates/siro-web/src/subscription/: animation_frames.rs  interval.rs  map.rs  window_event.rs
crates/siro/src/: app.rs  attr.rs  children.rs  event.rs  html.rs  lib.rs  mailbox.rs  node.rs  subscription.rs  svg.rs  types.rs  util.rs  vdom.rs  view.rs
crates/siro/src/app/: renderer.rs
crates/siro/src/attr/: attribute.rs  class.rs  inner_html.rs  property.rs  style.rs
crates/siro/src/children/: iter.rs
crates/siro/src/event/: on.rs  on_.rs  prevent_default.rs
crates/siro/src/mailbox/: map.rs
crates/siro/src/node/: element.rs  map.rs  text.rs
crates/siro/src/subscription/: animation_frames.rs  interval.rs  map.rs  window_event.rs
crates/siro/src/vdom/: custom.rs  element.rs  id.rs  map.rs  node.rs  render.rs  text.rs  types.rs
crates/siro/src/view/: attribute.rs  child.rs  children.rs  class.rs  element.rs  if_.rs  if_else.rs  iter.rs  map.rs  property.rs  raw.rs  style.rs  text.rs
examples/.template/: Cargo.toml  index.html
examples/.template/src/: lib.rs
examples/basic/: Cargo.toml  index.html
examples/basic/src/: lib.rs
examples/clock/: Cargo.toml  index.html
examples/clock/src/: lib.rs
examples/counter/: Cargo.toml  index.html
examples/counters/: Cargo.toml  index.html
examples/counters/src/: lib.rs
examples/fetch/: Cargo.toml  index.html
examples/fetch/src/: lib.rs
examples/form/: Cargo.toml  index.html
examples/forms/: Cargo.toml  index.css  index.html  index.js  webpack.config.js
examples/forms/src/: lib.rs
examples/hello/: Cargo.toml  index.html  index.js
examples/markdown/: Cargo.toml  index.css  index.html
examples/markdown/src/: lib.rs
examples/mouse/: Cargo.toml  index.html
examples/mouse/src/: lib.rs
examples/router/: Cargo.toml  index.html
examples/shapes/: Cargo.toml  index.html  index.js  webpack.config.js
examples/shapes/src/: lib.rs
examples/styles/: Cargo.toml  index.html
examples/styles/src/: lib.rs
examples/todomvc/: Cargo.toml  index.html  index.js  webpack.config.js
examples/todomvc/src/: app.rs  lib.rs
siro/: all.html  index.html  sidebar-items.js
siro/effects/: index.html  sidebar-items.js  trait.DomFocus.html  trait.Effects.html  trait.Navigation.html
siro/html/: fn.a.html  fn.abbr.html  fn.address.html  fn.area.html  fn.article.html  fn.aside.html  fn.audio.html  fn.b.html  fn.bdi.html  fn.bdo.html  fn.blockquote.html  fn.br.html  fn.button.html  fn.canvas.html  fn.caption.html  fn.cite.html  fn.code.html  fn.col.html  fn.colgroup.html  fn.data.html  fn.datalist.html  fn.dd.html  fn.del.html  fn.details.html  fn.dfn.html  fn.dialog.html  fn.div.html  fn.dl.html  fn.dt.html  fn.em.html  fn.embed.html  fn.fieldset.html  fn.figcaption.html  fn.figure.html  fn.footer.html  fn.form.html  fn.h1.html  fn.h2.html  fn.h3.html  fn.h4.html  (+65 more)
siro/prelude/: index.html
siro/svg/: fn.a.html  fn.animate.html  fn.animate_motion.html  fn.animate_transform.html  fn.circle.html  fn.clip_path.html  fn.custom.html  fn.defs.html  fn.desc.html  fn.discard.html  fn.ellipse.html  fn.fe_blend.html  fn.fe_color_matrix.html  fn.fe_component_transfer.html  fn.fe_composite.html  fn.fe_convolve_matrix.html  fn.fe_diffuse_lighting.html  fn.fe_displacement_map.html  fn.fe_drop_shadow.html  fn.fe_flood.html  fn.fe_func_a.html  fn.fe_func_b.html  fn.fe_func_g.html  fn.fe_func_r.html  fn.fe_gaussian_blur.html  fn.fe_image.html  fn.fe_merge.html  fn.fe_merge_node.html  fn.fe_morphology.html  fn.fe_offset.html  fn.fe_point_light.html  fn.fe_specular_lighting.html  fn.fe_spot_light.html  fn.fe_tile.html  fn.fe_turbulence.html  fn.filter.html  fn.foreign_object.html  fn.g.html  fn.hatch.html  fn.hatchpath.html  (+27 more)
siro/vdom/: enum.AttributeValue.html  fn.attribute.html  fn.class.html  fn.event.html  fn.inner_html.html  fn.iter.html  fn.property.html  fn.style.html  index.html  sidebar-items.js  struct.Map.html  trait.Attributes.html  trait.AttributesRenderer.html  trait.Event.html  trait.EventDecoder.html  trait.Nodes.html  trait.NodesRenderer.html  type.CowStr.html
siro_web/: all.html  index.html  sidebar-items.js  struct.App.html  struct.Env.html  struct.Error.html  type.Result.html
siro_web/app/: struct.App.html
siro_web/env/: struct.Env.html
siro_web/error/: struct.Error.html  type.Result.html
siro_web/subscription/: fn.animation_frames.html  fn.interval.html  fn.window_event.html  index.html  sidebar-items.js  struct.AnimationFrames.html  struct.Interval.html  struct.Map.html  struct.WindowEvent.html  trait.Subscription.html
src/: app.rs  attr.rs  builder.rs  callback.rs  children.rs  effects.rs  event.rs  global.rs  html.rs  lib.rs  mailbox.rs  node.rs  subscription.rs  svg.rs  util.rs  vdom.rs
src/builder/: html.rs  svg.rs
src/event/: on.rs  on_input.rs
src/html/: input.rs  textarea.rs
src/mailbox/: proxy.rs
src/node/: element.rs  iter.rs  map.rs  text.rs
src/siro/: effects.rs.html  html.rs.html  lib.rs.html  svg.rs.html  vdom.rs.html
src/siro_web/: app.rs.html  env.rs.html  (+4 more)
xtask/: Cargo.toml
(+267 files in other folders)
