[package]
name = "siro"
version = "0.0.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
gloo-events = "0.1"
indexmap = "1.6"
itertools = "0.9"
js-sys = "0.3"
rustc-hash = "1.1"
wasm-bindgen = "0.2"

[dependencies.web]
package = "web-sys"
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
]

[workspace]
members = [
    ".",
    #"examples/*",
]
