[package]
name = "meow"
version = "0.0.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
itertools = "0.9"
gloo-events = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
]
