[package]
name = "siro-html"
version = "0.0.0-experimental.1"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
siro-vdom = { version = "0.0.0-experimental.1", path = "../siro-vdom" }
paste = "1"

js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [ "Event" ] }
