[package]
name = "siro-html"
version = "0.0.0-experimental.1"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
siro-vdom = { version = "0.0.0-experimental.1", path = "../siro-vdom" }
serde = { version = "1", features = [ "derive" ] }
paste = "1"
