[package]
name = "siro-web"
version = "0.1.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = "Browser runtime for siro using web-sys"
edition = "2018"
repository = "https://github.com/ubnt-intrepid/siro.git"
license = "MIT OR Apache-2.0"

[dependencies]
siro = { version = "0.1.0", path = "../.." }

futures = "0.3"
gloo-events = "0.1"
indexmap = "1.6"
itertools = "0.9"
js-sys = "0.3"
once_cell = "1.4"
rustc-hash = "1.1"
serde = "1"
serde-wasm-bindgen = "0.1"
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4"

[dependencies.web]
package = "web-sys"
version = "0.3"
features = [
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "Location",
    "Node",
    "Storage",
    "Text",
    "Window",
]
