[package]
name = "siro"
version = "0.0.0-experimental.1"
publish = false
edition = "2018"
description = "A client side Web application library"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
repository = "https://github.com/ubnt-intrepid/siro.git"
license = "MIT OR Apache-2.0"

[dependencies]
either = "1"
futures = "0.3"
gloo-events = "0.1"
indexmap = "1.6"
itertools = "0.9"
js-sys = "0.3"
rustc-hash = "1.1"
wasm-bindgen = "0.2"
once_cell = "1.4"

[dependencies.web]
package = "web-sys"
version = "0.3"
features = [
    "Document",
    "DomTokenList",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
]
