[package]
name = "siro"
version = "0.0.0-experimental.1"
publish = false
edition = "2018"
description = "A client side Web application library"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
repository = "https://github.com/ubnt-intrepid/siro.git"
license = "MIT OR Apache-2.0"

[dependencies]
either = "1"
serde = "1"
