[package]
name = "example-counters"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
siro = { path = "../.." }
siro-html = { path = "../../crates/siro-html" }
siro-web = { path = "../../crates/siro-web" }

console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wee_alloc = "0.4"
