[package]
name = "example-fetch"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
siro = { path = "../.." }
siro-web = { path = "../../crates/siro-web" }

console_error_panic_hook = "0.1"
serde = { version = "1", features = [ "derive" ] }
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4"
wee_alloc = "0.4"
