[package]
name = "example-forms"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
siro = { path = "../../crates/siro" }
siro-html = { path = "../../crates/siro-html" }

console_error_panic_hook = "0.1"
futures = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
wee_alloc = "0.4"
