[package]
name = "example-markdown"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
siro = { path = "../.." }

ammonia = "3"
console_error_panic_hook = "0.1"
futures = "0.3"
js-sys = "0.3"
pulldown-cmark = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
wee_alloc = "0.4"
