[package]
name = "example-markdown"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
siro = { path = "../../crates/siro" }
siro-html = { path = "../../crates/siro-html" }
siro-web = { path = "../../crates/siro-web" }

ammonia = "3"
console_error_panic_hook = "0.1"
pulldown-cmark = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
wee_alloc = "0.4"
