[package]
name = "example-shapes"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
siro = { path = "../../crates/siro" }
siro-svg = { path = "../../crates/siro-svg" }
siro-web = { path = "../../crates/siro-web" }

console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wee_alloc = "0.4"
