[package]
name = "example-todomvc"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
siro = { path = "../../crates/siro" }
siro-html = { path = "../../crates/siro-html" }

console_error_panic_hook = "0.1"
futures = "0.3"
indexmap = { version = "1", features = [ "serde-1" ] }
js-sys = "0.3"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
ulid = { version = "0.4", features = [ "serde" ] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "Location", "Storage" ] }
wee_alloc = "0.4"
