[package]
name = "example-todomvc"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
siro = { path = "../.." }
siro-web = { path = "../../crates/siro-web" }

console_error_panic_hook = "0.1"
futures = "0.3"
indexmap = { version = "1", features = [ "serde-1" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
ulid = { version = "0.4", features = [ "serde" ] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wee_alloc = "0.4"
